# localize_ontologies

./: .gitignore  README.md  config.json_example  main.py  pyproject.toml
data/: dcterms-ar.ttl  dcterms-de.ttl  dcterms-es.ttl  dcterms-fr.ttl
src/localize_ontology/: annotate_ontology.py
tests/: dcterms-nl.ttl  dcterms.ttl
